# GenomeSTRFinder

./: .gitignore  LICENSE  README.MD  pyproject.toml
config/: STR_NIST.csv  chm13v2.0.chromtable.csv  config.toml
src/strfinder/: __init__.py  findstr.py
